--- a/conf/Makefile.am
+++ b/conf/Makefile.am
@@ -1,11 +1,11 @@
 AUTOMAKE_OPTIONS = 1.4 no-dependencies
 
 confdir = $(sysconfdir)/$(PACKAGE)
-conf_DATA = namazurc mknmzrc
-EXTRA_DIST = namazurc
-CLEANFILES = mknmzrc
+conf_DATA  = namazurc-sample mknmzrc-sample
+EXTRA_DIST = namazurc-sample
+CLEANFILES = mknmzrc-sample
 
-mknmzrc: ../pl/conf.pl
+mknmzrc-sample: ../pl/conf.pl
 	@grep -v '^package conf;$$' ../pl/conf.pl | \
 	perl -pe 's/^(\$$|\@|\%)/$$1conf::/' | \
 	perl -pe 's/^/\x23 / unless /^(\x23|$$)/' > $@
