--- a/template/NMZ.foot.ja.in
+++ b/template/NMZ.foot.ja.in
@@ -1,8 +1,8 @@
 <hr>
 <p>
-$B$3$NA4J88!:w%7%9%F%`$O(B
+¤³¤ÎÁ´Ê¸¸¡º÷¥·¥¹¥Æ¥à¤Ï
 <strong><a href="@OPT_NMZ_URI@">Namazu</a> <!-- VERSION --> v@VERSION@ <!-- VERSION --></strong>
-$B$K$h$C$F9=C[$5$l$F$$$^$9!#(B
+¤Ë¤è¤Ã¤Æ¹½ÃÛ¤µ¤ì¤Æ¤¤¤Þ¤¹¡£
 </p>
 <address>
 <a href="mailto:@OPT_ADMIN_EMAIL@">@OPT_ADMIN_EMAIL@</a>
