--- a/po/Makefile.in.in
+++ b/po/Makefile.in.in
@@ -48,7 +48,7 @@ COMPILE = $(CC) -c $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS) $(XCFLAGS)
 SOURCES = cat-id-tbl.c
 POFILES = @POFILES@
 GMOFILES = @GMOFILES@
-ADDITIONAL_FILES = make_jis7_po.in make_sjis_po
+ADDITIONAL_FILES = make_iso-2022-jp_po.in make_sjis_po
 DISTFILES = ChangeLog Makefile.in.in POTFILES.in $(PACKAGE).pot \
 stamp-cat-id $(POFILES) $(GMOFILES) $(SOURCES) $(ADDITIONAL_FILES)
 
