--- a/scripts/mknmz.pl.in
+++ b/scripts/mknmz.pl.in
@@ -1,9 +1,9 @@
 #! @PERL@ -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.pl.in,v 1.7 2000-01-06 09:57:01 knok Exp $
+# $Id: mknmz.pl.in,v 1.8 2000-01-06 10:02:00 satoru Exp $
 #
-# Copyright (C) 1997-1999 Satoru Takabayashi  All rights reserved.
+# Copyright (C) 1997-2000 Satoru Takabayashi  All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
