--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.70 2000-01-05 12:59:02 rug Exp $
+dnl $Id: configure.in,v 1.71 2000-01-07 09:06:18 satoru Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -77,8 +77,7 @@ AC_FUNC_MMAP
 AC_FUNC_MEMCMP
 AC_FUNC_VPRINTF
 AC_CHECK_FUNCS(getcwd getwd putenv setenv strdup strspn)
-AC_REPLACE_FUNCS([memmove strcasecmp strncasecmp strcspn \
-		strstr])
+AC_REPLACE_FUNCS([memmove strcasecmp strncasecmp strcspn strerror strstr])
 AC_CHECK_FUNCS([vsnprintf _vsnprintf])
 if test $ac_cv_func_vsnprintf = no && test $ac_cv_func__vsnprintf = no; then
     LIBOBJS="$LIBOBJS vsnprintf.${ac_objext}"
