--- a/po/make_iso-2022-jp_po.in
+++ b/po/make_iso-2022-jp_po.in
@@ -6,8 +6,13 @@ open(OUT, ">ja_JP.ISO-2022-JP.po") || die;
 
 while (<IN>) {
     s/charset=EUC-JP/charset=ISO-2022-JP/;
+    s/Content-Transfer-Encoding: 8-bit/Content-Transfer-Encoding: 7-bit/;
     $c_format = 1 if /^\#, c-format/;
     $c_format = 0 if /^$/;
+
+    if ($c_format == 1 && $c eq "%") {
+	return "%%";
+    }
 
     s/([\xa1-\xfe]+)/\\033\\044\\102$1\\033\\050\\102/g;
     s/([\xa1-\xfe])/escape($1)/ge;
@@ -17,9 +22,5 @@ while (<IN>) {
 sub escape { 
     my ($c) = @_;
     $c =~ tr/\xa1-\xfe/\x21-\x7e/;
-    if ($c_format == 1 && $c eq "%") {
-	return "%%";
-    } else {
-	return sprintf("\\%03o", ord($c));
-    }
+    return sprintf("\\%03o", ord($c));
 }
