--- a/po/make_iso-2022-jp_po.in
+++ b/po/make_iso-2022-jp_po.in
@@ -6,7 +6,6 @@ open(OUT, ">ja_JP.ISO-2022-JP.po") || die;
 
 while (<IN>) {
     s/charset=EUC-JP/charset=ISO-2022-JP/;
-    s/Content-Transfer-Encoding: 8-bit/Content-Transfer-Encoding: 7-bit/;
     $c_format = 1 if /^\#, c-format/;
     $c_format = 0 if /^$/;
 
@@ -18,5 +17,9 @@ while (<IN>) {
 sub escape { 
     my ($c) = @_;
     $c =~ tr/\xa1-\xfe/\x21-\x7e/;
-    return sprintf("\\%03o", ord($c));
+    if ($c_format == 1 && $c eq "%") {
+	return "%%";
+    } else {
+	return sprintf("\\%03o", ord($c));
+    }
 }
