--- a/template/NMZ.head.in
+++ b/template/NMZ.head.in
@@ -21,7 +21,7 @@
 --></style>
 </head>
 <body lang="en">
-<h1>Namazu the full text retrieval search system</h1>
+<h1>Namazu a full text retrieval search system</h1>
 <p>
 This index contains <!-- FILE --> 0 <!-- FILE --> documents and
 <!-- KEY --> 0 <!-- KEY --> keywords. 
