--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.72 2000-01-09 13:26:48 satoru Exp $
+dnl $Id: configure.in,v 1.73 2000-01-10 18:38:40 rug Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -68,6 +68,9 @@ AC_C_BIGENDIAN
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
 AC_C_INLINE
+AC_CHECK_SIZEOF(int)
+AC_CHECK_SIZEOF(long)
+AC_CHECK_SIZEOF(long long)
 AC_TYPE_PID_T
 AC_TYPE_SIZE_T
 
@@ -88,21 +91,12 @@ dnl for debugging.
 AM_WITH_CCMALLOC
 
 dnl *
-dnl * Check File::MMagic module wheter to be build or not.
-dnl *
-AC_ARG_WITH(
-    file-mmagic,
-    [  --without-file-mmagic   do not build file-mmagic perl module ],
-    [file_mmagic=${withval}], [file_mmagic='yes']
-)
-
-dnl *
 dnl * Check tknamazu wheter to be build or not.
 dnl *
 AC_ARG_WITH(
     tknamazu,
-    [  --without-tknamazu      do not build namazu with tcl/tk front-end ],
-    [tknamazu=${withval}], [tknamazu='yes']
+    [  --with-tknamazu         do not build namazu with tcl/tk front-end ],
+    [tknamazu=${withval}], [tknamazu='no']
 )
 
 dnl *
@@ -194,7 +188,7 @@ test "$PMDIR" && ADDITIONAL_INC="$PMDIR"
 AC_SUBST(ADDITIONAL_INC)
 
 dnl *
-dnl * Checks for external commands
+dnl * Checks for external programs
 dnl *
 AC_ARG_WITH(
     perl5,
@@ -207,62 +201,34 @@ if test $PERL = "no" || $PERL -e 'exit ($] >= 5.004)'; then
     AC_MSG_ERROR(perl 5.004 or later required)
 fi
 
-AC_ARG_WITH(
-    nkf,
-    [  --with-nkf=PATH         set nkf command location [search path]],
-    NKF=$with_nkf
-    AC_MSG_RESULT(using $with_nkf for nkf),
-    if test -z "$NKF"; then
-    AC_MSG_CHECKING(for NKF module)
-        if $PERL -MNKF -e '' 1>/dev/null 2> /dev/null; then
-            NKF=module_nkf
-            AC_MSG_RESULT(yes)
-        else
-            AC_MSG_RESULT(no)
-            [AC_PATH_PROG(NKF,nkf, no)] 
-        fi
-    fi
-)
+AC_MSG_CHECKING(for NKF perl module)
+if $PERL -MNKF -e '' 1>/dev/null 2> /dev/null; then
+    NKF=module_nkf
+    AC_MSG_RESULT(yes)
+else
+    AC_MSG_RESULT(no)
+    AC_PATH_PROG(NKF,nkf, no)
+fi
 if test "$NKF" = "no"; then
     AC_MSG_WARN(NKF (network kanji filter) not found)
 fi
 
-AC_ARG_WITH(
-    kakasi,
-    [  --with-kakasi=PATH      set kakasi command location [search path]],
-    KAKASI=$with_kakasi
-    AC_MSG_RESULT(using $with_kakasi for kakasi),
-    if test -z "$KAKASI"; then
-        AC_MSG_CHECKING(for Text::Kakasi module)
-        if $PERL -MText::Kakasi -e '' 1>/dev/null 2> /dev/null; then
-            KAKASI=module_kakasi
-            AC_MSG_RESULT(yes)
-        else
-            AC_MSG_RESULT(no)
-            [AC_PATH_PROG(KAKASI,kakasi, no)] 
-        fi
-    fi
-)
+AC_MSG_CHECKING(for Text::Kakasi perl module)
+if $PERL -MText::Kakasi -e '' 1>/dev/null 2> /dev/null; then
+    KAKASI=module_kakasi
+    AC_MSG_RESULT(yes)
+else
+    AC_MSG_RESULT(no)
+    AC_PATH_PROG(KAKASI,kakasi, no)
+fi
 
-AC_ARG_WITH(
-    chasen,
-    [  --with-chasen=PATH      set chasen command location [search path]],
-    CHASEN=$with_chasen
-    AC_MSG_RESULT(using $with_chasen for chasen),
-    if test -z "$CHASEN"; then
-	AC_MSG_CHECKING(for Text::ChaSen module)
-	if $PERL -MText::ChaSen -e '' 1>/dev/null 2> /dev/null; then
-	    CHASEN=module_chasen
-	    AC_MSG_RESULT(yes)
-	else
-	    AC_MSG_RESULT(no)
-	    [AC_PATH_PROG(CHASEN,chasen, no)] 
-	fi
-    fi
-)
-
-if test "$KAKASI" = "no" -a "$CHASEN" = "no"; then
-    AC_MSG_WARN(KAKASI or ChaSen are required to handle Japanese)
+AC_MSG_CHECKING(for Text::ChaSen perl module)
+if $PERL -MText::ChaSen -e '' 1>/dev/null 2> /dev/null; then
+    CHASEN=module_chasen
+    AC_MSG_RESULT(yes)
+else
+    AC_MSG_RESULT(no)
+    AC_PATH_PROG(CHASEN,chasen, no)
 fi
 
 AC_MSG_CHECKING(for default wakatigaki processor)
@@ -271,130 +237,82 @@ if test "$KAKASI" != "no"; then
     OPT_WAKATI_DEFAULT=KAKASI
 elif test "$CHASEN" != "no"; then
     OPT_WAKATI_DEFAULT=CHASEN
+else
+    AC_MSG_WARN(KAKASI or ChaSen are required to handle Japanese)
 fi
 AC_MSG_RESULT($OPT_WAKATI_DEFAULT)
 AC_SUBST(OPT_WAKATI_DEFAULT)
 
-
 dnl *
 dnl * Preprocessing for tknamazu
+dnl * (FIXME: ugly scripts)
 dnl *
 
 dnl * For determining namazu and mknmz pathnames
 ac_cv_path_NAMAZU="$bindir/namazu"
 ac_cv_path_MKNMZ="$bindir/mknmz"
 
-if test "${tknamazu}" = "no"; then
-    TKNAMAZU=""
-else
-    AC_ARG_WITH(
-        wish,
-        [  --with-wish=PATH        set wish location [search path]],
-        AC_MSG_RESULT(using $with_wish for wish)
-        WISH = $with_wish,
-        dnl checking for wish (ugly)
-        [AC_PATH_PROGS(WISH, wish8.0jp wish4.2jp wish8.2 wish8.1 wish, no)]
-    )
+TKNAMAZU=""
+if test "${tknamazu}" != "no"; then
+    AC_PATH_PROGS(WISH, wish8.0jp wish4.2jp wish8.2 wish8.1 wish, no)
     if test "$WISH" = "no"; then
-        AC_MSG_WARN(wish not found: tknamazu will not be built)
-        TKNAMAZU=""
+	AC_MSG_WARN(wish not found: tknamazu will not be built)
     else
-        AC_ARG_WITH(
-	    lynx,
-	    [  --with-lynx=PATH        set lynx browser location [search path]],
-	    AC_MSG_RESULT(using $with_lynx for lynx)
-	    LYNX = $with_lynx,
-	    [AC_PATH_PROG(LYNX, lynx, no)]
-        )
-        if test "$LYNX" = "no"; then
-            AC_MSG_WARN(lynx not found: tknamazu will not be built)
-            TKNAMAZU=""
+	AC_PATH_PROG(LYNX, lynx, no)
+	if test "$LYNX" = "no"; then
+	    AC_MSG_WARN(lynx not found: tknamazu will not be built)
         else
             TKNAMAZU="tknamazu"
-            AC_ARG_WITH(
-		groff,
-		[  --with-groff=PATH       set groff location [search path]],
-		AC_MSG_RESULT(using $with_groff for groff)
-		GROFF = $with_groff,
-		[AC_PATH_PROGS(GROFF, jgroff groff nroff, no)]
-            )
-            if test "$GROFF" = "no"; then
-                AC_MSG_WARN(groff not found: tknamazu cannot browse man pages)
-            fi
-            AC_ARG_WITH(
-                info,
-                [  --with-info=PATH        set info location [search path]],
-                AC_MSG_RESULT(using $with_info for info)
-                INFO = $with_info,
-                [AC_PATH_PROG(INFO, info, no)]
-            )
-            if test "$INFO" = "no"; then
-                AC_MSG_WARN(info not found: tknamazu cannot browse info files)
-            fi
-            AC_ARG_WITH(
-                zcat,
-                [  --with-zcat=PATH        set zcat location [search path]],
-                AC_MSG_RESULT(using $with_zcat for zcat)
-                ZCAT = $with_zcat,
-                [AC_PATH_PROG(ZCAT, zcat, no)]
-            )
-            if test "$ZCAT" = "no"; then
-                AC_MSG_WARN(zcat not found)
-            fi
-            AC_ARG_WITH(
-                netscape,
-                [  --with-netscape=PATH    set netscape location [search path]],
-                AC_MSG_RESULT(using $with_netscape for netscape)
-                NETSCAPE = $with_netscape,
-                [AC_PATH_PROG(NETSCAPE, netscape, no)]
-            )
-            if test "$NETSCAPE" = "no"; then
-            AC_MSG_WARN(netscape not found)
-            fi
-        fi
+	fi
     fi
 fi
 AC_SUBST(TKNAMAZU)
 AC_CONFIG_SUBDIRS($TKNAMAZU)
-
+dnl FIXME: tknamazu/Makefile always be generated. 
 
 dnl *
 dnl * Preprocessing for File::MMagic
 dnl *
-if test "${file_mmagic}" = "no"; then
-    FILE_MMAGIC=""
-else
+AC_MSG_CHECKING([whether included file-mmagic is requested])
+AC_ARG_WITH(
+    included-file-mmagic,
+    [  --with-included-file-mmagic use file-mmagic perl module included here ],
+    [file_mmagic=${withval}], [file_mmagic='no']
+)
+AC_MSG_RESULT($file_mmagic)
+
+if test "${file_mmagic}" != "yes"; then
     changequote(<<, >>)
     tmp=`$PERL -nle 'print \$1 if /^\\$VERSION = \"([\d\.]+)\";\$/' \
-    	File-MMagic/MMagic.pm`
+	File-MMagic/MMagic.pm`
     # tmp="10.0"  # for testing
-    AC_MSG_CHECKING(for File::MMagic module)
-
-    FILE_MMAGIC=""
-    if $PERL -e "use lib '$PMDIR'; use File::MMagic $tmp" \
-    1>/dev/null 2> /dev/null; then
-        AC_MSG_RESULT(yes)
-    else
-        AC_MSG_RESULT(no)
-        AC_MSG_WARN(File::MMagic module not installed. preparing its Makefile.)
-        cd File-MMagic
-        if test -z "$PMDIR"; then
-            $PERL Makefile.PL
-        else
-            $PERL Makefile.PL LIB=$PMDIR
-        fi
-
-	# To prevent to remove Makefile when doing 'make clean'
-	grep -v '^	-mv Makefile Makefile\.old \$(DEV_NULL)' \
-	Makefile > Makefile.tmp
-	mv Makefile.tmp Makefile
-
-        cd ..
-        FILE_MMAGIC="File-MMagic"
-    fi
+    AC_MSG_CHECKING(for File::MMagic perl module)
     changequote([, ])
+
+    if $PERL -e "use lib '$PMDIR'; use File::MMagic $tmp" >/dev/null 2>&1; then
+	AC_MSG_RESULT(yes)
+	file_mmagic=no
+    else
+	AC_MSG_RESULT(no)
+	file_mmagic=yes
+    fi
 fi
-AC_SUBST(FILE_MMAGIC)
+if test "${file_mmagic}" = "yes"; then
+    AC_MSG_WARN(File::MMagic module not installed. preparing its Makefile.)
+    cd File-MMagic
+    if test -z "$PMDIR"; then
+	$PERL Makefile.PL
+    else
+	$PERL Makefile.PL LIB=$PMDIR
+    fi
+
+    # To prevent to remove Makefile when doing 'make clean'
+    grep -v '^	-mv Makefile Makefile\.old \$(DEV_NULL)' Makefile > Makefile.tmp
+    mv Makefile.tmp Makefile
+
+    cd ..
+fi
+AM_CONDITIONAL(BUILD_FILE_MMAGIC, test x$file_mmagic = xyes)
 
 dnl *
 dnl * Check for Emacs and where to install .elc files.
@@ -402,16 +320,10 @@ dnl *
 AM_PATH_LISPDIR
 
 dnl *
-dnl * Set default behavior
+dnl * Set default behavior (will be moved)
 dnl * 
 AC_DEFINE_UNQUOTED(OPT_SCORING, $OPT_SCORING)
 AC_DEFINE(MSIE4MACFIX)
-
-dnl *
-dnl * Namazu's website URL
-dnl * 
-OPT_NMZ_URI="http://openlab.ring.gr.jp/namazu/"
-AC_SUBST(OPT_NMZ_URI)
 
 dnl * 
 dnl * Output Files.
@@ -444,9 +356,7 @@ AC_OUTPUT([Makefile
 	   src/Makefile
 	   template/Makefile
 	   template/NMZ.head
-	   template/NMZ.foot
 	   template/NMZ.head.ja
-	   template/NMZ.foot.ja
 	  ],
 	  [chmod +x nmz-config \
 		    scripts/gtnmz \
