--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,8 +1,8 @@
-# $Id: Makefile.am,v 1.4 1999-11-28 23:50:31 satoru Exp $ 
+# $Id: Makefile.am,v 1.5 2000-01-13 18:33:01 rug Exp $ 
 AUTOMAKE_OPTIONS = no-dependencies
 
 EXTRA_DIST = memcmp.c strcspn.c vsnprintf.c memmove.c strncasecmp.c \
-	     memset.c strcasecmp.c strstr.c system.h
+	     memset.c strcasecmp.c strstr.c system.h easy-vsnprintf.c
 
 noinst_LIBRARIES = libnmzut.a
 libnmzut_a_SOURCES = getopt.c getopt1.c getopt.h
