--- a/scripts/mknmz.pl.in
+++ b/scripts/mknmz.pl.in
@@ -1,7 +1,7 @@
 #! @PERL@ -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.pl.in,v 1.9 2000-01-12 06:22:40 knok Exp $
+# $Id: mknmz.pl.in,v 1.10 2000-01-16 12:39:35 satoru Exp $
 #
 # Copyright (C) 1997-2000 Satoru Takabayashi  All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -1181,14 +1181,7 @@ sub write_message ($) {
 
 	if (-f $template) {
 	    my $buf = util::readfile($template);
-	    my $fh_output;
-	    if (util::islang("ja") && !$var::USE_NKF_MODULE) {
-		$fh_output = util::efopen("|$conf::NKF -j >$msgfile");
-	    } else {
-		$fh_output = util::efopen(">$msgfile");
-	    }
-	    $buf = NKF::nkf("-j", $buf) if $var::USE_NKF_MODULE;
-
+	    my $fh_output = util::efopen(">$msgfile");
 	    print $fh_output $buf;
 	}
     }
@@ -1627,13 +1620,7 @@ sub make_headfoot ($$$) {
 	}
     }
 
-    # the file must be saved in ISO-2022-JP encoding.
-    my $fh_file;
-    if (util::islang("ja") && !$var::USE_NKF_MODULE) {
-	$fh_file = util::efopen("|$conf::NKF -j >$file");
-    } else {
-	$fh_file = util::efopen(">$file");
-    }
+    my $fh_file = util::efopen(">$file");
 
     if ($buf =~ /(<!-- FILE -->)\s*(.*)\s*(<!-- FILE -->)/) {
 	my $total_files_count = util::commas(get_total_files() + $file_count 
@@ -1651,7 +1638,6 @@ sub make_headfoot ($$$) {
     $buf =~ s#(<!-- DATE -->)(.*)(<!-- DATE -->)#$1 $year-$month-$day $3#g;
     $buf =~ s/(<!-- VERSION -->)(.*)(<!-- VERSION -->)/$1 v$var::VERSION $3/g;
 
-    $buf = NKF::nkf("-j", $buf) if $var::USE_NKF_MODULE;
     print $fh_file $buf;
 }
 
